force-app/main/default/objects/Account_In__e/Account_In__e.object-meta.xml
<CustomObject>
    <label>Account - In</label>
    <pluralLabel>Accounts - In</pluralLabel>
</CustomObject>