force-app/main/default/objects/Account_In__e/fields/IdNumber__c.field-meta.xml
<CustomField>
    <fullName>IdNumber__c</fullName>
    <label>IdNumber</label>
    <length>20</length>
    <type>Text</type>
</CustomField>