force-app/main/default/objects/Account_In__e/fields/MiddleName__c.field-meta.xml
<CustomField>
    <fullName>MiddleName__c</fullName>
    <label>MiddleName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>