force-app/main/default/objects/Account_In__e/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>MobilePhone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>