force-app/main/default/objects/Account_In__e/fields/Passport__c.field-meta.xml
<CustomField>
    <fullName>Passport__c</fullName>
    <label>Passport</label>
    <length>50</length>
    <type>Text</type>
</CustomField>